[gd_scene load_steps=19 format=2]

[ext_resource path="res://vista/navBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/MenuJuego.gd" type="Script" id=2]
[ext_resource path="res://recursos/fondo.png" type="Texture" id=3]
[ext_resource path="res://fracmentos/GridLetras.tscn" type="PackedScene" id=4]
[ext_resource path="res://recursos/cora.png" type="Texture" id=5]
[ext_resource path="res://font/Montserrat-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://vista/viewPista.tscn" type="PackedScene" id=7]
[ext_resource path="res://font/Montserrat-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://recursos/icon_coin.png" type="Texture" id=9]
[ext_resource path="res://recursos/pista.png" type="Texture" id=10]
[ext_resource path="res://recursos/estilos/btnComodi_theme.tres" type="Theme" id=11]
[ext_resource path="res://recursos/ventana1.png" type="Texture" id=12]
[ext_resource path="res://font/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 25
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.945098, 0.647059, 0.34902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.427451, 0.0784314, 0.0862745, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.952941, 0.454902, 0.192157, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.427451, 0.0784314, 0.0862745, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_color = Color( 0.133333, 0.133333, 0.180392, 1 )
use_filter = true
font_data = ExtResource( 13 )

[node name="MenuJuego" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Control" parent="." instance=ExtResource( 1 )]

[node name="imagenMostrar" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 168.0
margin_right = 420.0
margin_bottom = 468.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 5 )
stretch_mode = 1

[node name="respuesta" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 531.0
margin_right = 45.0
margin_bottom = 571.0
rect_min_size = Vector2( 540, 60 )
alignment = 1

[node name="GridLetras" parent="." instance=ExtResource( 4 )]
anchor_top = 0.657
anchor_bottom = 0.657
margin_top = -68.69
margin_bottom = 69.31
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="btnPista" type="Button" parent="."]
anchor_left = 0.288
anchor_top = 0.762
anchor_right = 0.288
anchor_bottom = 0.762
margin_left = -89.52
margin_top = -42.54
margin_right = 89.48
margin_bottom = 41.46
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Pista"
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="viewPista" parent="." instance=ExtResource( 7 )]
pause_mode = 2
visible = false
margin_top = -235.0
margin_bottom = 365.0
texture = ExtResource( 12 )

[node name="lblTitulo" parent="viewPista" index="1"]
text = "$PISTA"

[node name="btnCerrar" parent="viewPista" index="2"]
anchor_top = 0.903
anchor_bottom = 0.903
margin_left = -105.0
margin_top = -39.8
margin_right = 105.0
margin_bottom = 40.2
rect_min_size = Vector2( 210, 80 )
text = "$CLOSE"
clip_text = true
icon_align = 1

[node name="btnContainer" type="VBoxContainer" parent="viewPista"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -181.0
margin_right = 200.0
margin_bottom = 178.0
custom_constants/separation = 15
alignment = 1

[node name="btnLetraAleatoria" type="Button" parent="viewPista/btnContainer"]
margin_top = 34.0
margin_right = 400.0
margin_bottom = 121.0
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 2 )
text = "$REVEAL_A_LETTER"
icon = ExtResource( 9 )
align = 0
icon_align = 2

[node name="50" type="Label" parent="viewPista/btnContainer/btnLetraAleatoria"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -15.5
margin_right = -77.0
margin_bottom = 15.5
custom_colors/font_color = Color( 1, 0.823529, 0.203922, 1 )
custom_fonts/font = SubResource( 5 )
text = "50"
align = 1
autowrap = true

[node name="btnEleminarLetra" type="Button" parent="viewPista/btnContainer"]
margin_top = 136.0
margin_right = 400.0
margin_bottom = 223.0
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 2 )
text = "$REMOVE_A_LETTER"
icon = ExtResource( 9 )
align = 0
icon_align = 2

[node name="80" type="Label" parent="viewPista/btnContainer/btnEleminarLetra"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -15.5
margin_right = -77.0
margin_bottom = 15.5
custom_colors/font_color = Color( 1, 0.823529, 0.203922, 1 )
custom_fonts/font = SubResource( 5 )
text = "80"
align = 1
autowrap = true

[node name="btnResolver" type="Button" parent="viewPista/btnContainer"]
margin_top = 238.0
margin_right = 400.0
margin_bottom = 325.0
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 2 )
text = "$REVEAL_ANSWER"
icon = ExtResource( 9 )
align = 0
icon_align = 2

[node name="120" type="Label" parent="viewPista/btnContainer/btnResolver"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -15.5
margin_right = -79.0
margin_bottom = 15.5
custom_colors/font_color = Color( 1, 0.823529, 0.203922, 1 )
custom_fonts/font = SubResource( 5 )
text = "120"
align = 1
autowrap = true

[editable path="GridLetras"]
[editable path="viewPista"]
